# CMake-collection

./: README
1_link_library/: CMakeLists.txt  README
1_link_library/src/: main.cc
2_link_LAPACKE/: CMakeLists.txt  README  main.c
